<resources>
    <string name="app_name">Video Player</string>
    <string name="widget_name">Video</string>
    <string name="plus_two">+2</string>
    <string name="player_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to this device</string>
    <string name="player_error_text_unknown">Sorry, this video cannot be played</string>
    <string name="player_error_text_notsupport">Unsupported file type</string>
    <string name="player_error_text_currupt">File has incorrect data</string>
    <string name="player_error_text_network">Network error occurred.</string>
    <string name="not_support">Not supported</string>
    <string name="zoom_not_support">Zoom not supported</string>
    <string name="cannot_play_video">Unable to play video</string>
    <string name="player_error_aia_error_msg">Unable to play video. Error occurred.</string>
    <string name="during_call">Unable to play during call</string>
    <string name="file_not_found">File not found</string>
    <string name="unsupported_file_type">Unsupported file type</string>
    <string name="error_transcoding_lack_of_resource">Unable to play file. Not enough resources.</string>
    <string name="error_drm_contents_is_already_playing">Unable to play video. DRM protected content already playing.</string>
    <string name="error_unsupported_video_codec">Unable to play video. Unsupported video codec.</string>
    <string name="menu_details">Details</string>
    <string name="sound_alive">SoundAlive</string>
    <string name="menu_audio">Select language</string>
    <string name="menu_Delete">Delete</string>
    <string name="menu_Subtitle">Subtitles (CC)</string>
    <string name="menu_ShareVia">Share via</string>
    <string name="cannot_shared">This video cannot be shared.</string>
    <string name="bright">Brightness</string>
    <string name="settings">Settings</string>
    <string name="menu_closedcaption">Captions will look like this.</string>
    <string name="closedcaption">Closed caption</string>
    <string name="menu_edit">Edit</string>
    <string name="auto_brightness_check">Automatic brightness</string>
    <string name="menu_bigpondtv">Bigpond TV</string>
    <string name="menu_downloadmusicvideo">Download Music Videos</string>
    <string name="brightness_text_check">Automatic brightness adjustment</string>
    <string name="brightness_text_uncheck">Brightness level</string>
    <string name="menu_play_via_group_play">Play via Group Play</string>
    <string name="menu_sendto_another_device">Send to another device</string>
    <string name="proceed_with_sharing_after">Downloading. You will be able to share your content once the download is complete. Please wait...</string>
    <string name="menu_miniController">Mini controller</string>
    <string name="left">Left</string>
    <string name="center">Centre</string>
    <string name="right">Right</string>
    <string name="mini_controller_will_be_applied_to_landscape_mode">The mini controller is only available in Landscape mode</string>
    <string name="menu_trim">Trim</string>
    <string name="menu_video_trimmer">Video trimmer</string>
    <string name="subtitle_on_off">Activation</string>
    <string name="sync">Sync</string>
    <string name="sec">sec</string>
    <string name="sec_faster">%1$d.%2$d seconds fast</string>
    <string name="sec_slower">%1$d.%2$d seconds slow</string>
    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="small">Small</string>
    <string name="font">Font</string>
    <string name="font_size">Size</string>
    <string name="language">Language</string>
    <string name="Nolanguage">No languages</string>
    <string name="Error_Subtitles">Invalid %s file</string>
    <string name="select_subtitle">Select subtitles</string>
    <string name="subtitle_Empty">Empty</string>
    <string name="subtitle_fontcolor">Font colour</string>
    <string name="subtitle_backgroundcolor">Background</string>
    <string name="white_color">White</string>
    <string name="black_color">Black</string>
    <string name="blue_color">Blue</string>
    <string name="green_color">Green</string>
    <string name="red_color">Red</string>
    <string name="yellow_color">Yellow</string>
    <string name="magenta_color">Magenta</string>
    <string name="cyan_color">Cyan</string>
    <string name="custom_color">Custom</string>
    <string name="none">None</string>
    <string name="video_subtitle_lang_eng">English</string>
    <string name="video_subtitle_lang_ch">繁體中文</string>
    <string name="video_subtitle_lang_jp">日本語</string>
    <string name="video_subtitle_lang_kr">한글</string>
    <string name="video_subtitle_lang_fr">Français</string>
    <string name="video_subtitle_lang_it">Italiano</string>
    <string name="video_subtitle_lang_de">Deutsch</string>
    <string name="video_subtitle_lang_es">Español</string>
    <string name="reset">Reset</string>
    <string name="change_subtitle_file">Select different subtitles to be used.</string>
    <string name="monotype_default_font">Default font</string>
    <string name="monotype_dialog_font_cool">Cool jazz</string>
    <string name="monotype_dialog_font_rose">Rosemary</string>
    <string name="monotype_dialog_font_choco">Choco cooky</string>
    <string name="monotype_dialog_font_applemint">Apple mint</string>
    <string name="monotype_dialog_font_tinkerbell">Tinker bell</string>
    <string name="monotype_dialog_font_maruberi">UDRGothic</string>
    <string name="monotype_dialog_font_mincho">UDMincho</string>
    <string name="monotype_dialog_font_pop">Pop</string>
    <string name="monotype_dialog_font_girl">ShaoNv</string>
    <string name="monotype_dialog_font_kaiti">Kaiti</string>
    <string name="monotype_dialog_font_miao">MiaoWu</string>
    <string name="monotype_dialog_font_Courier">Courier New</string>
    <string name="monotype_dialog_font_TimesNewRoman">Times New Roman</string>
    <string name="monotype_dialog_font_AndaleMono">Andale Mono</string>
    <string name="monotype_dialog_font_SamsungSansSmallCap">Samsung Sans Small Cap</string>
    <string name="invalid_subtitle_file">Subtitles not supported.</string>
    <string name="alignment">Alignment</string>
    <string name="font_edge">Edge</string>
    <string name="menu_overview">Overview</string>
    <string name="menu_text">Text</string>
    <string name="color">Colour</string>
    <string name="opacity">Opacity</string>
    <string name="menu_color_and_opacity">Colour and opacity</string>
    <string name="caption_window">Caption window</string>
    <string name="no_edge">No edge</string>
    <string name="raised_edge">Raised</string>
    <string name="depressed_edge">Depressed</string>
    <string name="uniform_edge">Uniform</string>
    <string name="drop_shadowed_edge">Drop shadow</string>
    <string name="subtitle_custom">Custom</string>
    <string name="IDS_VPL_GO_TO_WEBVTT_SETTINGS">Go to accessibility settings to change a settings for WebVTT format</string>
    <string name="subtitle_video_off">No subtitles available</string>
    <string name="normal">Normal</string>
    <string name="voice">Voices</string>
    <string name="music">Music</string>
    <string name="surround">Virtual 7.1 ch</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="hi_speed_scrubbing">"Detailed seek (1x).
Slide your finger upwards to adjust the scrubbing rate."</string>
    <string name="half_speed_scrubbing">"Detailed seek (1/2x).
Slide your finger upwards to adjust the scrubbing rate."</string>
    <string name="quarter_speed_scrubbing">"Detailed seek (1/4x).
Slide your finger upwards to adjust the scrubbing rate."</string>
    <string name="scrubbing_at_psx_speed">Scrubbing at %sx speed.</string>
    <string name="full_screen">Unable to play in multi window</string>
    <string name="only_play_in_fullscreen">This video only play in full screen. Multi window will be discard.</string>
    <string name="only_play_in_talkbackoff">Unable to use TalkBack while using the pop-up player. TalkBack will be disabled.</string>
    <string name="details_name">File name</string>
    <string name="details_size">File size</string>
    <string name="details_resolution">Resolution</string>
    <string name="details_duration">Duration</string>
    <string name="details_format">Format</string>
    <string name="details_date">Last modified</string>
    <string name="details_forwarding">Forwarding</string>
    <string name="impossible">Impossible</string>
    <string name="possible">Possible</string>
    <string name="details_audio_channel">Audio channel</string>
    <string name="mono">Mono</string>
    <string name="stereo">Stereo</string>
    <string name="path">Path</string>
    <string name="delete_popup_title">Delete selected items?</string>
    <string name="delete_popup_text">This item will be deleted.</string>
    <string name="delete_popup_all">All items will be deleted</string>
    <string name="delete_popup_nitems">%d items will be deleted</string>
    <string name="delete_complete">Deleted</string>
    <string name="lowbattery_title">Warning</string>
    <string name="lowbattery_info">Low battery</string>
    <string name="title_unknown">Unknown</string>
    <string name="ShareList_done">Share</string>
    <string name="done">Done</string>
    <string name="list">List</string>
    <string name="audio_track">Audio Track</string>
    <string name="video_drm_use_1_time">You can use %s 1 time</string>
    <string name="video_drm_use_n_times">You can use %1$s %2$d times</string>
    <string name="video_drm_play_now_q">Play now?</string>
    <string name="video_drm_this_item_no_longer_use">This item is no longer available</string>
    <string name="video_drm_locked">%s locked</string>
    <string name="video_drm_unlock_it_q">Do you want to unlock it now?</string>
    <string name="video_drm_first_render">This time is first play</string>
    <string name="dot">.</string>
    <string name="video_drm_item_expired">This item expired. Connect to PC and download licence.</string>
    <string name="video_detail_drm_permission_type_display">Display</string>
    <string name="video_detail_drm_permission_type_play">Play</string>
    <string name="video_detail_drm_permission_type_excute">Execute</string>
    <string name="video_detail_drm_permission_type_print">Print</string>
    <string name="video_detail_drm_constraint_type_unlimited">Unlimited</string>
    <string name="video_detail_drm_constraint_type_time">Time</string>
    <string name="video_detail_drm_constraint_type_date">Date</string>
    <string name="video_detail_drm_constraint_type_count">Count</string>
    <string name="video_detail_drm_constraint_type_interval">Interval</string>
    <string name="video_detail_drm_constraint_type_timed_count">Timed count</string>
    <string name="video_detail_drm_constraint_type_accumulated_time">Accumulated time</string>
    <string name="video_taptoaddvideo">Tap to add video</string>
    <string name="video_magazine_novideo_comment">Play your own videos seamlessly and discover new videos</string>
    <string name="menu_download">Download</string>
    <string name="menu_VideoMaker">Video Editor</string>
    <string name="via_Bluetooth">Listen via Bluetooth</string>
    <string name="via_Device">Listen via device</string>
    <string name="menu_sstudio">Studio</string>
    <string name="chapterview_name">Chapter preview</string>
    <string name="refresh">Refresh</string>
    <string name="video_allshare_scan_for_nearby_devices">Scan for nearby devices</string>
    <string name="search_hint">Search</string>
    <string name="menu_overview_cap">OVERVIEW</string>
    <string name="menu_text_cap">TEXT</string>
    <string name="menu_color_and_opacity_cap">COLOUR AND OPACITY</string>
</resources>