<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/videowidget_magazine_2x1_def" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/videowidget_magazine_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/magazine_widget_video_noitem_bg" android:scaleType="centerCrop" android:layout_alignParentTop="true" />
        <ImageView android:id="@id/videowidget_magazine_noitem_ic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/video_widget_magazine_title_marginTop" android:src="@drawable/magazine_video_noitem_ic" android:layout_centerInParent="true" />
        <TextView android:textSize="@dimen/video_widget_magazine_title_textSize" android:textColor="#fff5f5f5" android:layout_gravity="left" android:id="@id/videowidget_magazine_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/video_widget_magazine_title_marginLeft" android:layout_marginTop="@dimen/video_widget_magazine_title_marginTop" android:text="@string/widget_name" android:shadowColor="#66000000" android:shadowDy="2.0" android:shadowRadius="2.0" />
        <TextView android:textSize="@dimen/video_widget_magazine_novideo1_textSize" android:textColor="#fff5f5f5" android:ellipsize="end" android:layout_gravity="center" android:id="@id/videowidget_magazine_novideo1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/video_widget_magazine_novideo1_marginTop" android:text="@string/video_taptoaddvideo" android:singleLine="true" android:shadowColor="#66000000" android:shadowDy="2.0" android:shadowRadius="2.0" android:layout_alignTop="@id/videowidget_magazine_noitem_ic" android:layout_centerHorizontal="true" />
        <TextView android:textSize="@dimen/video_widget_magazine_novideo2_textSize" android:textColor="#fff5f5f5" android:gravity="center_horizontal" android:id="@id/videowidget_magazine_novideo2" android:layout_width="wrap_content" android:layout_height="@dimen/video_widget_magazine_novideo2_height" android:layout_marginTop="1.0dip" android:maxWidth="270.0dip" android:text="@string/video_magazine_novideo_comment" android:shadowColor="#66000000" android:shadowDy="2.0" android:shadowRadius="2.0" android:layout_below="@id/videowidget_magazine_novideo1" android:layout_centerHorizontal="true" />
    </RelativeLayout>
</LinearLayout>