<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/ctrl_checkbox" android:background="@drawable/settings_selector_item" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/vp_brightness_layout_marginLeft" android:layout_marginTop="@dimen/vp_brightness_layout_marginTop" android:layout_marginRight="@dimen/vp_brightness_layout_marginRight">
        <com.sec.android.app.videoplayer.view.AnimatedCheckBox android:gravity="center_vertical" android:id="@id/auto_brightness_checkbox" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" />
        <TextView android:textSize="@dimen/vp_brightness_description_text_size" android:textColor="@color/brightness_text_color" android:id="@id/auto_brightness_text" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/vp_brightness_description_margin" android:text="@string/auto_brightness_check" android:layout_toRightOf="@id/auto_brightness_checkbox" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/brightness_level" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/vp_brightness_layout_marginLeft" android:layout_marginTop="@dimen/vp_brightness_level_marginTop" android:layout_marginRight="@dimen/vp_brightness_layout_marginRight">
        <TextView android:textSize="@dimen/vp_auto_brightness_description_text_size" android:textColor="@color/brightness_text_color" android:id="@id/brightness_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/brightness_text_check" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
        <TextView android:textSize="@dimen/vp_brightness_seekbar_text_size" android:textColor="@color/brightness_text_level" android:id="@id/auto_brightness_text_level" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/plus_two" android:layout_alignParentRight="true" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/videocontroller_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/vp_seekbar_Layout_marginLeft" android:layout_marginTop="@dimen/vp_seekbar_Layout_marginTop" android:layout_marginBottom="@dimen/vp_seekbar_Layout_marginBottom">
        <SeekBar android:id="@id/videocontroller_progress" android:paddingLeft="@dimen/vp_seekbar_auto_paddingLeft" android:paddingRight="@dimen/vp_seekbar_bright_paddingRight" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:progress="10" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <RelativeLayout android:id="@id/videocontroller_layout_sub" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_centerVertical="true">
            <com.sec.android.touchwiz.widget.TwSeekBarSplit android:id="@id/videocontroller_progress_auto" android:paddingLeft="@dimen/vp_seekbar_auto_paddingLeft" android:paddingRight="@dimen/vp_seekbar_auto_paddingRight" android:focusable="true" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/brightnessSeekBarTheme"
              xmlns:touchwiz="http://schemas.android.com/apk/res/touchwiz" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>